# Pilkarzyki

Program/: Thumbs.db
Program/src/: CMakeLists.txt  CameraStart.cpp  CameraStart.h  Contours.cpp  Contours.h  DetectLine.cpp  DetectLine.h  FindContours.cpp  FindContours.h  GetRoi.cpp  GetRoi.h  Nowy dokument tekstowy.txt  Perspective.cpp  Perspective.h  Thumbs.db  Winner.cpp  Winner.h  main.cpp
Program/src/zdj/: Thumbs.db
